--- a/styles-about.css
+++ b/styles-about.css
@@ -21,13 +21,13 @@ nav {
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 30px;
-  padding-left: 75px;
-  padding-right: 75px;
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
 
 .nav-links {
   display: flex;
@@ -37,8 +37,8 @@ nav {
   display: inline-block;
   width: 100%;
   height: 100%;
-  max-width: 32px;
-  max-height: 32px;
+  max-width: 42px;
+  max-height: 42px;
 }
 
 .logo img {
@@ -73,7 +73,7 @@ nav {
     justify-content: center;
     padding: 5% 15%; /* Top-bottom padding of 5% and left-right padding of 15% */
     max-width: 1400px;
-    margin: 0 auto;
+    margin: 50px 0 auto;
 }
 
 /* Adjusting the main profile and text sections */
@@ -86,29 +86,33 @@ nav {
 }
 
 .profile-pic {
-  max-width: 400px;
+  width: 50%;
   border-radius: 5%;
   box-shadow: 0 10px 20px -4px rgba(0,0,0,.6);
 }
 
 .profile-text {
-    max-width: 400px;
+    max-width: 700px;
 }
 
 .profile-text h1 {
   font-family: 'Source Sans 3', sans-serif;
   font-weight: 700;
   font-size: 3em;
+  margin-bottom: 5px;
 }
 
 .profile-text h2 {
-    font-size: 2em;
+    font-size: 35px;
+    margin-bottom: 5px;
   }
 
 .profile-text p {
     font-family: 'Source Sans 3', sans-serif;
     font-weight: 300;
-    font-size: 15px;
+    font-size: 17px;
+    color: #8b9198;
+    margin-bottom: 10px;
 }
 
 .section-divider {
@@ -133,10 +137,11 @@ nav {
 .column h2 {
   font-family: 'Source Sans 3', sans-serif;
   font-weight: 700;
-  font-size: 1em;
+  font-size: 15px;
   text-transform: uppercase;
   margin-top: 0;
   position: relative;
+  color: #5d6369;
 }
 
 .heading-break {
@@ -150,12 +155,19 @@ nav {
 .column h3 {
     font-family: 'Source Sans 3', sans-serif;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 15px;
+    color: #8b9198;
 }
 
 .column p {
     font-family: 'Source Sans 3', sans-serif;
     font-weight: 300;
-    font-size: 1em;
+    font-size: 15px;
     margin-bottom: 10px;
+    color: #8b9198;
+}
+
+.profile-link {
+    text-decoration: none;
+  color: #0049C9;
 }
