--- a/styles.css
+++ b/styles.css
@@ -209,3 +209,35 @@ nav {
   margin: 0 auto;
 }
 
+@media (max-width: 768px) {
+  .navbar {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .intro-text {
+    top: 15vh;
+  }
+
+  .unchanging-text,
+  .unchanging-text-reg,
+  .blue-text {
+    font-size: 8vw;
+  }
+  
+  .portfolio-img img {
+    max-width: 100%;
+  }
+  
+  .portrait-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .portrait-item {
+    width: 48%; /* Adjusting for a 2-column grid layout */
+  }
+}
+
+
